# email_mbmlbook

./: .gitignore  CHANGELOG.md  README.md  compound.py  get_data.py  initial.py  offline.py  parse_list_values.py  personalisation.py  pyproject.toml  seed.py  separate.py  single.py  with_recipient.py  with_subject_prefix.py
data/: CompoundInputs_objml.csv  InitialInputs_objml.csv  OfflineInputs_objml.csv  OneFeatureInputs_objml.csv  PersonalisationInputs_objml.csv  SeedInputs_objml.csv  SeparateInputs_objml.csv  WithSubjectPrefixInputs_objml.csv
email_mbmlbook/: __init__.py  data.py  source.py
tests/: test_data.py  test_email_mbmlbook.py  test_parse_compound_inputs.py  test_parse_initial_inputs.py  test_parse_offline_inputs.py  test_parse_one_feature_inputs.py  test_parse_personalisation_inputs.py  test_parse_seed_inputs.py  test_parse_seperate_inputs.py  test_parse_with_recipient.py  test_parse_with_subject_prefix.py
