[tool.poetry]
name = "email_mbmlbook"
version = "0.1.0"
description = ""
authors = ["bdatko <ben.datko@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
untangle = "^1.1.1"
pandas = "^1.4.1"
watermark = "^2.3.0"
black = "^22.1.0"
ipython = "^8.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
commitizen = "^2.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
