[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "$version"
annotated_tag = true
version_files = [
    "email_mbmlbook/__init__.py:__version__",
    "pyproject.toml:version"
]

[tool.poetry]
name = "email_mbmlbook"
version = "0.2.0"
description = ""
authors = ["bdatko <ben.datko@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
untangle = "^1.1.1"
pandas = "^1.4.1"
watermark = "^2.3.0"
black = "^22.1.0"
ipython = "^8.1.1"
more-itertools = "^8.12.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
commitizen = "^2.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
